# gradient-descent

GRD/: Dockerfile  docker-compose.yml  pyproject.toml  run.sh
GRD/grd/: main.py  main3d.py  main4.py  notebook.ipynb
