[tool.poetry]
name = "grd"
version = "0.1.0"
description = ""
authors = ["Muaeen <muaeen.gharib@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
ipykernel = "^6.29.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pyproject-toml = "^0.0.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
